objects/Case.object
<CustomObject>
    <fields>
        <fullName>Protection_Percent__c</fullName>
        <label>Proteccion (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Protection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proteccion</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Cases (Proteccion)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refund_type__c</fullName>
        <description>Medio por el cual se recibe el reintegro</description>
        <inlineHelpText>Medio por el cual se recibe el reintegro</inlineHelpText>
        <label>Medio Reintegro</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refunds_reason__c</fullName>
        <description>Motivos del reintegro</description>
        <label>Motivo Reintegro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Débito por error de sistema</fullName>
                </value>
                <value>
                    <fullName>Saldo a favor en cuenta por Migración a Prepago</fullName>
                </value>
                <value>
                    <fullName>Pago duplicado</fullName>
                </value>
                <value>
                    <fullName>Reclamos de facturación favorables</fullName>
                </value>
                <value>
                    <fullName>Mala gestión / anulación de ventas</fullName>
                </value>
                <value>
                    <fullName>Recategorización impositiva</fullName>
                </value>
                <value>
                    <fullName>Equipo mal facturado</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedTechQuoteStatus__c</fullName>
        <description>Indica el status de Presupuesto Tecnico  asociado al Caso</description>
        <formula>TEXT(Order__r.OrderApprovalStatus__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RelatedTechQuoteStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rellamado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to identify if a customer is calling again about same case</description>
        <label>Rellamado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepairWarrantyEndDate__c</fullName>
        <description>Fecha fin de la garantía de reparación</description>
        <label>Fin de garantía de reparación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RepairWarranty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Se utilizó la garantía de reparación</description>
        <inlineHelpText>Se utilizó la garantía de reparación</inlineHelpText>
        <label>Garantía de Reparación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repaired_With_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reparación cubierta por garantía</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repairs__c</fullName>
        <label>Repairs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RepeatedCalls__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rellamados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution_Comment__c</fullName>
        <description>Resolution Comment</description>
        <label>Resolution Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ServiceOwner__c</fullName>
        <label>Service Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Este campo se usa para indicar la criticidad de una caso , esto para las gestiones que sean consideradas criticas . Un caso asociado a una gestión critica contendrá el valor Alto en severidad  y en caso que la gestión no sea critica contendrá el valor Bajo</description>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alto</fullName>
                </value>
                <value>
                    <fullName>Bajo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speech__c</fullName>
        <description>Describe o guia la conversacion entre el agente y el cliente para un determinado caso</description>
        <label>Speech</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Fecha  utilizada para en el caso del registro manual  indicar en que momento se inicio el evento masivo . En el caso de incidentes masivos automatizados la fecha de inicio y la de creación seran las mismas</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <description>Define el  subtipo de un caso por ejemplo Siebel , Negocio Net, Negocio 2000 ( , campo agregado a solicitud de Telecom )</description>
        <label>SubType</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Siebel</fullName>
                </value>
                <value>
                    <fullName>Negocio Net</fullName>
                </value>
                <value>
                    <fullName>Negocio 2000</fullName>
                </value>
                <value>
                    <fullName>Web de gestión móvil</fullName>
                </value>
                <value>
                    <fullName>NPS</fullName>
                </value>
                <value>
                    <fullName>Click</fullName>
                </value>
                <value>
                    <fullName>Paginas externas</fullName>
                </value>
                <value>
                    <fullName>Avaya  CMS Supervisor</fullName>
                </value>
                <value>
                    <fullName>Avaya APC - Internet Monitor</fullName>
                </value>
                <value>
                    <fullName>Avaya APC - Monitos Online</fullName>
                </value>
                <value>
                    <fullName>Avaya APC - Monitor Reportes</fullName>
                </value>
                <value>
                    <fullName>Avaya APC (Agente)</fullName>
                </value>
                <value>
                    <fullName>Avaya Barra AIC</fullName>
                </value>
                <value>
                    <fullName>Avaya Barra AIC / ONE X</fullName>
                </value>
                <value>
                    <fullName>Avaya IC Manager</fullName>
                </value>
                <value>
                    <fullName>Avaya IN - Caída Total</fullName>
                </value>
                <value>
                    <fullName>Avaya ONE X</fullName>
                </value>
                <value>
                    <fullName>Banner de Productividad</fullName>
                </value>
                <value>
                    <fullName>Herramientas de Gestión/ Atencion</fullName>
                </value>
                <value>
                    <fullName>Inconveniente con las llamadas</fullName>
                </value>
                <value>
                    <fullName>Inconvenientes con correo</fullName>
                </value>
                <value>
                    <fullName>Página de Niveles</fullName>
                </value>
                <value>
                    <fullName>Social Media - WebLogueo</fullName>
                </value>
                <value>
                    <fullName>Trans Routing</fullName>
                </value>
                <value>
                    <fullName>TUID</fullName>
                </value>
                <value>
                    <fullName>Grabador NICE</fullName>
                </value>
                <value>
                    <fullName>Epiron (Redes Sociales)</fullName>
                </value>
                <value>
                    <fullName>Novedad Informativa</fullName>
                </value>
                <value>
                    <fullName>SNAP</fullName>
                </value>
                <value>
                    <fullName>Sender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subarea__c</fullName>
        <description>Creado por historia de usuario PFTA-86 Sprint 3 de Care</description>
        <label>Subarea</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actualización de Datos del Cliente</fullName>
                </value>
                <value>
                    <fullName>Reseteo de Clave</fullName>
                </value>
                <value>
                    <fullName>Consulta técnica</fullName>
                </value>
                <value>
                    <fullName>PESI</fullName>
                </value>
                <value>
                    <fullName>RESI</fullName>
                </value>
                <value>
                    <fullName>APSI</fullName>
                </value>
                <value>
                    <fullName>PDAT</fullName>
                </value>
                <value>
                    <fullName>PENV</fullName>
                </value>
                <value>
                    <fullName>SENV</fullName>
                </value>
                <value>
                    <fullName>RIMP</fullName>
                </value>
                <value>
                    <fullName>PEPR</fullName>
                </value>
                <value>
                    <fullName>PPROV</fullName>
                </value>
                <value>
                    <fullName>NULL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategoria</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Política de contratación</fullName>
                </value>
                <value>
                    <fullName>Calidad en la Atención</fullName>
                </value>
                <value>
                    <fullName>Información Brindada</fullName>
                </value>
                <value>
                    <fullName>Publicidad</fullName>
                </value>
                <value>
                    <fullName>Demoras en la Atención</fullName>
                </value>
                <value>
                    <fullName>Política de Precios</fullName>
                </value>
                <value>
                    <fullName>Atención Ejecutivos</fullName>
                </value>
                <value>
                    <fullName>Resolución</fullName>
                </value>
                <value>
                    <fullName>Productos/Servicios</fullName>
                </value>
                <value>
                    <fullName>Servicio Técnico</fullName>
                </value>
                <value>
                    <fullName>Contacto Web</fullName>
                </value>
                <value>
                    <fullName>Medios Pago</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TipoAjuste__c</fullName>
        <description>Este campo es necesario para guardar en el caso, si el ajuste es o no excepción el cual se usará posteriormente en el proceso de aprobación para determinar los montos mínimos.</description>
        <label>Tipo Ajuste</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TipoConcepto__c</fullName>
        <description>En este campo se guardan los conceptos asociados al proceso de ajuste.</description>
        <label>Tipo Concepto</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TipoSeleccion__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CREDITO PREPAGO</fullName>
                </value>
                <value>
                    <fullName>CREDITO POSPAGO</fullName>
                </value>
                <value>
                    <fullName>FACTURA EMITIDA</fullName>
                </value>
                <value>
                    <fullName>CARGOS AUN NO FACTURADOS</fullName>
                </value>
                <value>
                    <fullName>PUNTOS CLUB</fullName>
                </value>
                <value>
                    <fullName>VENTAS</fullName>
                    <isActive>false</isActive>
                    <label>VENTAS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TipoItem__c</fullName>
        <description>Este campo depende de TipoCargo que esta asociado al proceso de Ajustes.</description>
        <label>Tipo Item</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tipo__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abono/proporcional</fullName>
                </value>
                <value>
                    <fullName>Abono roaming / proteccion personal / Servicio BB / Otros SVA</fullName>
                </value>
                <value>
                    <fullName>Cambio de condicion impositiva</fullName>
                </value>
                <value>
                    <fullName>Cargo de reconexión</fullName>
                </value>
                <value>
                    <fullName>Cargo por penalidad baja anticipada / cambio de plan / mercado</fullName>
                </value>
                <value>
                    <fullName>Cliente no reconoce linea</fullName>
                </value>
                <value>
                    <fullName>Consumos de datos</fullName>
                </value>
                <value>
                    <fullName>Consumos de internet</fullName>
                </value>
                <value>
                    <fullName>Contestador personal</fullName>
                </value>
                <value>
                    <fullName>Cuota de equipo</fullName>
                </value>
                <value>
                    <fullName>Cuotas de convenio de pago</fullName>
                </value>
                <value>
                    <fullName>Descuento Recarga SOS</fullName>
                </value>
                <value>
                    <fullName>Fuera del area local</fullName>
                </value>
                <value>
                    <fullName>Larga distancia internacional</fullName>
                </value>
                <value>
                    <fullName>Larga distancia nacional</fullName>
                </value>
                <value>
                    <fullName>Minutos/SMS</fullName>
                </value>
                <value>
                    <fullName>No se pudo determinar motivo descuento</fullName>
                </value>
                <value>
                    <fullName>Numero Amigo/Grupo Fliar</fullName>
                </value>
                <value>
                    <fullName>Numeros amigos</fullName>
                </value>
                <value>
                    <fullName>Pack</fullName>
                </value>
                <value>
                    <fullName>Recarga delivery</fullName>
                </value>
                <value>
                    <fullName>Recarga inicial</fullName>
                </value>
                <value>
                    <fullName>Renovacion cuota datos</fullName>
                </value>
                <value>
                    <fullName>Roaming fronterizo</fullName>
                </value>
                <value>
                    <fullName>Roaming internacional</fullName>
                </value>
                <value>
                    <fullName>Solicitudes administrativas (cbio tit, numero, transf de credito, etc)</fullName>
                </value>
                <value>
                    <fullName>Stop Personal</fullName>
                </value>
                <value>
                    <fullName>Suscrip/trivias/contenidos</fullName>
                </value>
                <value>
                    <fullName>Suscripciones / Contenidos / Trivias</fullName>
                </value>
                <value>
                    <fullName>WIN/Pooling/Interflota</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TipoOperacionAjuste__c</fullName>
        <description>Campo necesario en ajustes para guardar si es Debito o Credito.</description>
        <label>TipoOperacionAjuste</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TipoSeleccion__c</fullName>
        <description>Field dependiente que me permite seleccionar si se trata de una cuenta o un servicio para mostrar el Tipo Concepto, Tipo Cargo, Tipo Item.</description>
        <label>TipoSeleccion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cuenta</fullName>
                </value>
                <value>
                    <fullName>Servicio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <description>Este campo depende  del TipoConcepto que esta relacionado con el proceso de Ajustes.</description>
        <label>TipoCargo</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TipoConcepto__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cargos fijos facturados</fullName>
                </value>
                <value>
                    <fullName>Cargos variables facturados</fullName>
                </value>
                <value>
                    <fullName>Otros cargos no facturados</fullName>
                </value>
                <value>
                    <fullName>Tipo de comprobante</fullName>
                </value>
                <value>
                    <fullName>Cargos fijos no facturados</fullName>
                </value>
                <value>
                    <fullName>Cargos variables no facturados</fullName>
                </value>
                <value>
                    <fullName>Otros cargos facturados</fullName>
                </value>
                <value>
                    <fullName>No aplica Pospago</fullName>
                </value>
                <value>
                    <fullName>No aplica Prepago</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_asset__c</fullName>
        <description>Tipo de producto reportado en el caso, toma el valor del campo vlocity_cmt__Type__c configurado de Product2. Es usado para filtrar la consulta en los casos de tech care.</description>
        <formula>Asset.Tipo_de_Producto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of asset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnidadAjuste__c</fullName>
        <description>Este campo es necesario para guardar en el caso la unidad de ajuste correspondiente.</description>
        <label>Unidad Ajuste</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Datos(Mb)</fullName>
                </value>
                <value>
                    <fullName>Voz</fullName>
                </value>
                <value>
                    <fullName>Credito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VoucherNumber__c</fullName>
        <description>Representa el número de comprobante asociado a la gestion de Ajuste ( Escenario de Ajuste Total o Ajuste item Comprobante)</description>
        <label>VoucherNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkShop__c</fullName>
        <description>PFTA-7817</description>
        <label>WorkShop</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amount_tdc__c</fullName>
        <description>Monto de pago con tarjeta de crédito</description>
        <inlineHelpText>Monto de pago con tarjeta de crédito</inlineHelpText>
        <label>Monto pago TDC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bank_type__c</fullName>
        <description>Banco asociado a la tarjeta de credito</description>
        <label>Banco</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>equipment_repaired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si para un caso relacionado con la reparación de un equipo , si el equipo fue reparado o no en el transcurso de la gestión</description>
        <label>Repaired Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_a_claim__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Este campo identifica la gestión como un reclamo, si se llama al caso desde el módulo Suspensions &amp; Reconections</description>
        <label>Es un Reclamo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>payment_refunds_date__c</fullName>
        <description>Fecha del pago  con tarjeta de credito que origina la solicitud de reintegro (En gestion de Re Integros) o  fecha asociada a la Recarga ( Gestion Problemas con Recargas)</description>
        <label>Fecha de Pago</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tdc_number__c</fullName>
        <description>Numero de tarjeta de crédito usada para el reintegro.</description>
        <label>Numero TDC</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_type__c</fullName>
        <description>Tipo de tarjeta(VISA, Master)</description>
        <label>Tipo TDC</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisputeId__c</fullName>
        <label>DisputeId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Dispute_ID__c</fullName>
        <label>Dispute ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FollowUpTo__c</fullName>
        <description>If this activity is a follow up to a previous activity.</description>
        <label>Follow Up To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IndicatorImageName__c</fullName>
        <description>Formula: Calculated &quot;indicator&quot; image name based on the priority and status of this Case. Used to display an indicator image on this case when shown in the user interface.</description>
        <formula>IF(TEXT(Priority)==&apos;High&apos; &amp;&amp; TEXT(Status)!= &apos;Closed&apos;, &apos;highpriorityopen&apos;, (IF(TEXT(Priority)==&apos;High&apos; &amp;&amp; TEXT(Status)==&apos;Closed&apos;, &apos;highpriorityclose&apos;, (IF(TEXT(Priority)==&apos;Medium&apos; &amp;&amp; TEXT(Status)!= &apos;Closed&apos;, &apos;mediumpriorityopen&apos;, (IF(TEXT(Priority)==&apos;Medium&apos; &amp;&amp; TEXT(Status) == &apos;Closed&apos;, &apos;mediumpriorityclose&apos;, (IF(TEXT(Priority)==&apos;Low&apos; &amp;&amp; TEXT(Status)!=&apos;Closed&apos;, &apos;lowpriorityopen&apos;, IF(TEXT(Priority)==&apos;Low&apos; &amp;&amp; TEXT(Status) ==&apos;Closed&apos;, &apos;lowpriorityclose&apos;,&apos;&apos; ))) )))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriorityImageName__c</fullName>
        <description>Formula: Calculated &quot;priority&quot; image name based on the priority of this Case. Used to display a priority image on this case when shown in the user interface.</description>
        <formula>TEXT(Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the service Asset which is the subject of this Case.</description>
        <label>Service ID</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Asset.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Asset.vlocity_cmt__BillingAccountId__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Asset.vlocity_cmt__ServiceAccountId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__Statement__c.vlocity_cmt__AccountId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__Statement__c</referenceTo>
        <relationshipLabel>Disputes</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement Line Item</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__StatementLineItem__c.vlocity_cmt__StatementId__r.vlocity_cmt__AccountId__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.vlocity_cmt__StatementId__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.vlocity_cmt__StatementId__c</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__StatementLineItem__c.vlocity_cmt__StatementId__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.vlocity_cmt__StatementId__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__StatementLineItem__c</referenceTo>
        <relationshipLabel>Disputes</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatusImageName__c</fullName>
        <description>Formula: Calculated &quot;status&quot; image name based on the status of this Case. Used to display a status image on this case when shown in the user interface.</description>
        <formula>TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Image Name</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>Area__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>vlocity_cmt__ServiceId__c</columns>
        <columns>Due_Date__c</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ENTITLEMENT.NAME</field>
            <operation>greaterThan</operation>
            <value>!</value>
        </filters>
        <label>Todos Los Casos Abiertos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BAckOfficeTestCentralizado_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BAckOfficeTestCentralizado</label>
        <queue>BAckOfficeTestCentralizado</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BGH_Avellaneda_Mitre_485_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BGH-Avellaneda-Mitre 485</label>
        <queue>BGH_Avellaneda_Mitre_485</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BGH_Belgrano_Cabildo_2101_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BGH-Belgrano -Cabildo 2101</label>
        <queue>BGH_Belgrano_Cabildo_2101</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BGH_Mendoza_San_Martin_1244_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BGH- Mendoza San Martin 1244</label>
        <queue>BGH_Mendoza_San_Martin_1244</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BOHighTechRosario_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BO High Tech Rosario</label>
        <queue>BOHighTechRosario</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BO_High_Tech_Rosario_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BO High Tech Rosario</label>
        <queue>BO_High_Tech_Rosario</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BackOfficeTest_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>BackOfficeTest</label>
        <language>es</language>
        <queue>BackOfficeTest</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Back_Office_Centralizado_Telefenico_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Back Office Centralizado</label>
        <queue>Back_Office_Centralizado</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>COLA_Test_1_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>COLA-Test-1</label>
        <queue>COLA_Test_1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cobranzas_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Cobranzas</label>
        <queue>Cobranzas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>